--- a/free-nodes/page-7.htm
+++ b/free-nodes/page-7.htm
@@ -120,6 +120,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-12-01">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-12-1-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="12月1日→19.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-12-1-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">12月1日→19.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、新加坡、香港、美国、欧洲、日本、加拿大等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-11-30">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-11-30-clash-node.htm" class="xcblog-blog-url">
@@ -246,20 +260,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-11-21">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-11-21-clash-node.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="11月21日→20.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-11-21-clash-node.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">11月21日→20.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、加拿大、日本、新加坡、韩国、欧洲、美国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-6.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li class="active"><span>7</span></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li><li><a href="/free-nodes/page-12.htm">12</a></li> <li><a href="/free-nodes/page-8.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -270,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-38790.htm" title="动物美容院由谁监管（动物美容院由谁监管的）">动物美容院由谁监管（动物美容院由谁监管的）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-6-clash-node.htm" title="11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-17-node-share-links.htm" title="10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-14-free-node-subscribe-links.htm" title="10月14日→18.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">10月14日→18.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-26-free-high-speed-nodes.htm" title="10月26日→19.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">10月26日→19.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-16-free-node-subscribe-links.htm" title="12月16日→20.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">12月16日→20.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-47694.htm" title="动物疫苗使用注意事项有哪些呢（动物疫苗使用时的注意事项有哪些）">动物疫苗使用注意事项有哪些呢（动物疫苗使用时的注意事项有哪些）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-25-node-share-links.htm" title="11月25日→19.8M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月25日→19.8M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-20-free-high-speed-nodes.htm" title="11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-47213.htm" title="免费领养宠物正规网站平台有哪些软件可以下载（领养宠物的软件平台）">免费领养宠物正规网站平台有哪些软件可以下载（领养宠物的软件平台）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-13-clash-node.htm" title="10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-1-free-shadowrocket-node.htm" title="11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月1日→18.5M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-19514.htm" title="动物疫苗采购问题（2021年动物疫苗采购）">动物疫苗采购问题（2021年动物疫苗采购）</a></li>
+                        <li class="py-2"><a href="/news/article-25955.htm" title="领养宠物签的合同到底有用吗知乎 领养宠物签的合同到底有用吗知乎文章">领养宠物签的合同到底有用吗知乎 领养宠物签的合同到底有用吗知乎文章</a></li>
+                        <li class="py-2"><a href="/news/article-21795.htm" title="天津狗狗领养吧 天津狗狗领养吧最新消息">天津狗狗领养吧 天津狗狗领养吧最新消息</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-30-clash-node-daily-updates.htm" title="12月30日→18.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">12月30日→18.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-13-free-ssr-node.htm" title="12月13日→20M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">12月13日→20M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-30156.htm" title="Redis 数据持久化实践">Redis 数据持久化实践</a></li>
+                        <li class="py-2"><a href="/news/article-46724.htm" title="成都宠物领养微信公众号是什么名字（成都宠物论坛领养）">成都宠物领养微信公众号是什么名字（成都宠物论坛领养）</a></li>
+                        <li class="py-2"><a href="/news/article-42760.htm" title="宠物粮食品牌取名怎么取的呢（国内十大宠物粮食品牌）">宠物粮食品牌取名怎么取的呢（国内十大宠物粮食品牌）</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
@@ -313,7 +313,7 @@
 	<div class="copy-right-social">
 		<div class="container">
 			<div class="footer-pos">
-				<a href="#ban" class="scroll"><img href="/assets/website/img/clashgithub/arrow.png" alt=" " class="img-responsive" /></a>
+				<a href="#ban" class="scroll"><img src="/assets/website/img/clashgithub/arrow.png" alt=" " class="img-responsive" /></a>
 			</div>
             <div class="col-lg-8 footer-left">
                             <p>
